# rust_daemon

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.json
app1/: date.sh
app3/: echo.sh
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: application.rs  ipc.rs  main.rs  utils.rs
