[package]
name = "rust_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1.46.0", features = ["full"] }
dirs = "4.0"
users = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
daemonize = "0.5.0"
tracing = "0.1.41"
procfs = "0.17.0"
libc = "0.2.174"
sysinfo = "0.36.0"
